syntax = "proto3";

package task;

option go_package ="user-service/proto/task;taskpb";

//Define TaskService service
service TaskService{
    rpc GetTask(GetTaskRequest) returns (GetTaskResponse) {}
}

//Message for requesting  
message GetTaskRequest{
    string email=1;
}

//Message for responding
message GetTask{
  string id =1;
  string name =2;
}
//Message for more responding
message GetTaskResponse{
  repeated GetTask tasks = 1;

}